--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -1,5 +1,6 @@
 <%= content_for :head do%>
 	<%= stylesheet_link_tag 'content'%>
+	<%= stylesheet_link_tag 'note' %>
 <% end %>
 	<div class="content">
 		<div class="left">
@@ -19,6 +20,50 @@
 					<li>3、开户行：<p>建行 6227003950190020749<br />工行 6222022515000654637<br />农行 6228483340383147417<br />中行</p></li>
 					<li>4、地址：云南省大理市大理古城红龙井16号</li>
 				</ul>
+						        <ul class="tip">
+				                	<li class="titles">拍照前注意事项</li>
+									<li>每个顾客在拍照前比较紧张，应该有什么样的注意事项。</li>
+									<li>大家可以看一下， 希望对你们拍照有所帮助!</li>
+							<li>1.拍摄前一周，建议去一次理发店，主要是修理杂乱发型。</li>
+							<li>2.拍摄前一晚，不能喝太多水，以避免眼睛水肿，当然更不能熬夜。</li>
+							<li>3.拍摄前一晚，女生最好能除腋毛. 很多衣服会拍摄到腋下， 对于照片来说不太雅观。</li>
+							<li>4.拍摄前一晚，洗头发, 不要上发胶，脸部可以做一些面膜护理。 方便第二天化妆师造型。</li>
+							<li>5.女生穿戴浅色无肩带内衣；浅色小裤裤；方便配衣服。男生需要刮胡子。 大家不要穿套头式衣服， 否则会弄乱头发造型。 前面5点都是摄影店的长期碰到最头疼的问题。 影响化妆造型，影响拍摄整体美感， 苦了后期。每个人选择拍摄自己的照片都是想有美丽的回忆。 但是往往这些很微小的细节会很大程度上影响了最后结果。</li>
+							<li>6.装眼镜的盒子/隐形眼镜药水(包括隐形眼镜及一般眼镜)。</li>
+							<li>7.不带贵重首饰。我曾经在很多家摄影店工作， 几乎每家店都出现过顾客东西“不翼而飞”的事情。小偷无处不在。</li>
+							<li>8.新人最好自备一个背包在外景时可以装自己的衣服，食品，饮水。</li>
+							<li>9.记得吃早餐，准时到店,不要迟到. 因为每个店安排顾客的时间都是给当天几个顾客错开来安排， 假设一个顾客迟到， 结局会影响到其他所有顾客的时间甚至自己的时间。</li>
+							<li>10.每个人的审美不同， 喜欢的风格不同， 我曾经碰到自己非常喜欢的作品， 可是作品的顾客本人并不喜欢。化妆拍照前与化妆师，摄影师进行一下沟通，说明自己想要的感觉与风格是很有必要的。</li>
+							<li>11.为了保证拍摄质量请勿与亲友同行. 即使是再专业的模特， 但是一旦有亲友在一旁观看， 难免觉得尴尬难堪， 放不开， 不能更自如的表现自己。 因为拍摄时摆的pose， 不是要表现平时的自己， 或者说是在镜头下展现出平时很少会去表现的自己。</li>
+							<li>12.道具的准备。每个人都有自己一些很有纪念意义的玩具娃娃， 或者哪怕只是一个上锁的日记本， 想把它拍成故事。 这些有故事的道具可以在拍摄当天带来。 摄影师会来者不拒。 举个例子：[url]http://bbs.wst.cn/dispbbs.asp?boardID=405&ID=815928&page=1[/url] 这个贴里面的照片， 妹妹带给我一颗心， 要我照着漫画里面的故事去拍。 我至今难忘的拍摄。</li>
+							<li>13.衣服的准备。可能大家会问我， 店里面有衣服， 难道还需要自己带吗？――― 其实就跟道具一样， 每个人都有自己很有怀念的曾经是爸爸， 曾经是男朋友，曾经是最好的伙伴一起出生入死穿的衣服。 带来把。</li>
+							<li>14.故事情节。―――有点更夸张了？ 很多人会问：这个不是摄影师去想的吗？―――我想说， 摄影师也是人， 摄影师的故事早在他还不是一个真正的摄影师的时候就早已经被他拍完了！ 他每天只是在重复自己的故事， 把自己的故事， 自己的心情重复的放在每一个顾客的照片中。 更简单的说， 这就是所谓摄影师的感觉。 有时候总是听到这句话：为什么这个顾客拍的很多， 那个顾客拍的少。 ――― it’s all because the feelings. ―――每个人都喜欢新鲜感， 摄影师也是一样， 喜欢挑战新的事物。 </li>
+							<li>15.信任你的化妆师和摄影师。同时自己一定要自信。我喜欢拍摄时候聊天讲话， 不是因为我想和任何人结交朋友， 每个人都有自己的故事， 有自己的感觉， 我只是为了每个顾客能在我拍摄的时候更自信的把自己的感觉表现出来。 ―――如果自己本身是个很有自信的人， 我可以省去很多聊天讲话的时间， 大家更快的进入状态。</li>
+							<li>16.下雨。 如果碰到拍摄当天下雨可以把套系转成内景拍摄或者直接跟老板要求改期。</li>
+							<li>17.宠物。 如果你想和你的狗狗一起拍， 店家百般理由不允许， 建议你换家店拍把。 可能性很多： 老板怕狗狗弄脏店面， 摄影师怕狗狗在影棚拉屎， 化妆师妹妹怕狗狗。。。 即使他们答应拍狗狗， 也肯定是勉强按了几张。 ―――一点忠告： 如果想和宠物一起拍， 需要和老板，摄影师更多的沟通。 如果碰到我这种爱狗之人就不一样了， 哈哈， 自己吹牛一下。</li>
+							<li>18.选片日期。每家店的运作模式不同， 规定的选片日期也不同。 虽然最强的欲望都是拍完想马上看到照片， 但是我还是建议， 最好做到不要催促提早选片日期。 跟后期说一句： “我的照片不用着急， 慢慢做， 慢工出细活。” 这是每个后期师都喜欢听到的话。 虽然客套， 虽然很假， 但是听到的人会感觉很好， 而且必定感觉很好的去照顾你的每一张照片。 选片日期还有可能提前的哦。^_^</li>
+							<li>19.反馈。 化妆和拍摄时候有任何不舒服或者想投诉的问题应该及时反馈给对方或者直接投诉老板。 这不是为了出气吵架， 只是让对方知道你的不满才能及时的更正， 更好的合作。 在一天的拍摄后也可以把自己的感觉和拍摄中的问题说出来， 摄影毕竟也是服务行业， 只有更多的接受不同顾客的意见和需求才能进步。</li>
+							<li>20.取样。 拿照片的时候核对自己的收据上面对照实物。 很多商家喜欢在这上面动手脚省成本。 比如： 原本答应给你的是工厂做的一体成型的相册却糊弄你给的是手工做的杂志册。</li>
+							<li> </li>
+							<li class="height">希望你一整天都能有个好心情,祝福大家拍摄愉快！</li>
+							<li class="more">写给想拍照和即将拍照的人</li>
+							<li>记住：专业模特不同于普通人，他们有很好的镜头表现力。而一个摄影师的手法高低，关键看他给顾客拍的好不好。这才是最关键的。如果把一个专业模特放在你面前，即使你是个稍微懂点摄影的人，也会拍摄的很好的。而如何把一个没有经过训练，而又很普通的人拍摄的很好，很有感觉，确需要摄影师有相当的底蕴。</li>
+							<li>做摄影师的人有 2种，一种是为了混碗饭吃的，他学摄影的目的也无外呼有个就业门路。另外一种是先把摄影当做一种爱好，然后发现自己是块料，进而转为商业摄影的。</li>
+							<li>如果你拍照的时候遇到的是第一种摄影师，那你得小心了。因为如果这样的摄影师就职于影楼或工作室，他无论给你拍成什么样，反正他都会拿那些工资。即使这样的摄影师有些拍摄上的想法和创新，也会因为所处工作环境从上到下的压力而屈服于现实。全国比较大的影楼相当多。每一个摄影师一天的接单拍摄量也相当的多。如果他一天只接一个单的话，恐怕这个摄影师连影楼会一起掉。</li>
+							<li>如果你拍照的时候遇到的是第2种摄影师，我想应该是一种造化了。这样的摄影师往往在拍摄上很有自己的想法，并且多数都开了自己的店或是工作室。他们会尽力的去靠口碑来发展自己的摄影事业。而且都靠自己的拍摄风格来生存。</li>
+							<li>其实摄影师是很累的。无论是给别人干还是自己干都是很累的，从脑力上一直到体力上都是一种极大的消耗。
+				</li>
+							<li>当你去某一家摄影店想拍摄的时候，记住一定要和摄影师沟通，哪怕是见个面也好。简单说句话也好。这样摄影师起码就能大概了解你的性格，和你的喜好。及你的身材，相貌。优点，缺点。因为你无论去哪家有名的，没名的摄影店，给你拍摄的，并不是那位前台接单的小姐而是在棚里或工作室内默默无闻的摄影师！----因为你花钱的目的是拍照，而不是去领什么奖品。</li>
+							<li>在决定拍照之前，要多走几家摄影店，看看各家的摄影风格，哪一家是你喜欢的，你想要的。</li>
+							<li>关于价格的问题，也要详细咨询！记住天上是永远不会掉下来馅饼的。看似很低的套系，要了解他的后期消费是否合理。（因为前期拍摄价位很低的时候，往往后期存在很大的消费陷阱）其实摄影是门艺术艺术不会贬低艺术自己，当它变成商业行为的时候，也不会去做赔本的生意。比如某店赠送放大照片的时候，一定要问清楚，在后期是否加膜，加膜是否收费，是否装裱？装裱是否收费？</li>
+							<li class="problem">当你预定之前，最关键性的问题有：</li>
+							<li>化妆怎么收费？假睫毛多少钱？安瓶多少钱一瓶？你们会给我用几瓶？如果我不使用的话，是否可以？使用皇冠收费么？使用项链耳环收费么？使用假花收费么？使用真花怎么收费？你们提供给我的服装是哪年的款式？是否为干净的？我可以使用几套？我相中其他款式的服装是否收费？多少钱？哪个室内的实景是收费的？多少？相册是否带箱？收费多少？入册的照片是否为整幅？底片数据是否收费？给到手的是否为修整过的数据？购买套系外版权收费多少？是否洗出照片？多少寸？或者是购买多少张版权可以再入册？再入册每张照片多大？再做册子是否加钱？多少？等等。。。</li>
+							<li>当你去工作室预定的时候，由于多数都是摄影师自己开的店，在很多方面会很人性化。除了必须咨询的问题外，尽量不要讲价。因为每一个摄影师都把自己定在一个合理的价位上了 。一个只值10块钱的摄影师不会开价管你要100的。当一个摄影师开价一张片子值300元的时候，他确实已经被认可而值这个价位了。</li>
+							<li>经常我们独立开店的摄影师在一起交流的时候，都会谈到顾客讲价的问题，其实摄影师是最忌讳讲价的。当然我们也很理解，换个角度，如果我们处于顾客的位置，也会讲价的。这是人的正常消费心理。只是我在这里讲出了我们的心声，或许你们理解，或许不理解。讲价或多或少的会影响拍摄质量，因为好的摄影师是靠思想和灵魂来拍摄的。在降低他的艺术价值的时候，会在心理上存在一种暗示。</li>
+							<li> 话说回来，每一家有每一家的特色，无论是大影楼还是小影楼，还是具有个性的摄影工作室。每一个要拍照的人都是想留下自己美好或是想记忆的那一瞬间。选好摄影师是最关键的。因为你的目的是 拍照。</li>
+							<li>无论你在哪一家摄影店拍照，都会留下美好的瞬间。</li>
+							<li>最后给所有已经拍摄过、正在预定或即将预定拍摄的朋友们，感谢你们把美丽和帅气带给我们，带给大家，带给这个缤纷的世界。</li>
+						</ul>
 			</div>
 		</div>
 	</div>
