--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -30,7 +30,7 @@
 								<%= link_to photos_path(:album_id => album.id) do %>
 									<%= image_tag album.cover%>
 									<span>
-										<%= album.description%>
+										<%= album.name%>
 									</span>
 									<% end -%>
 								</li>
