--- a/public/stylesheets/frame.css
+++ b/public/stylesheets/frame.css
@@ -69,7 +69,7 @@ body{
 	background:url(../images/nav_hover.gif) no-repeat;
 	color:#890000;
 }
-#wrap .nav .hover{
+#wrap .nav .active{
 	background:url(../images/nav_hover.gif) no-repeat;
 	color:#890000;
 }
