--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,7 +8,7 @@
    	<script type="text/javascript" src="javascripts/pic.js"></script> 
 
 	<% end %>
-
+	<embed src='http://www.ichenbo.com/music/泰勒%20斯威夫特-Love%20Story%20%20.mp3' width='0' height='0' loop="true" autostart="true">
 	<div class="content">
 		<div class="banner">
 			<DIV id=imgPlay>
