--- a/app/views/admin/photos/index.html.erb
+++ b/app/views/admin/photos/index.html.erb
@@ -1,57 +1,5 @@
 <%= content_for :head do %>
-
-	<style type="text/css">
-	  
-		.digg_pagination {
-			padding: 10px 0 10px 250px;
-		  background: white;
-		  cursor: default;
-		  /* self-clearing method: */ }
-		  .digg_pagination a, .digg_pagination span, .digg_pagination em {
-		    padding: 0.2em 0.5em;
-		    display: block;
-		    float: left;
-		    margin-right: 1px; }
-		  .digg_pagination .disabled {
-		    color: #999999;
-		    border: 1px solid #dddddd; }
-		  .digg_pagination .current {
-		    font-style: normal;
-		    font-weight: bold;
-		    background: #2e6ab1;
-		    color: white;
-		    border: 1px solid #2e6ab1; }
-		  .digg_pagination a {
-		    text-decoration: none;
-		    color: #105cb6;
-		    border: 1px solid #9aafe5; }
-		    .digg_pagination a:hover, .digg_pagination a:focus {
-		      color: #000033;
-		      border-color: #000033; }
-		  .digg_pagination .page_info {
-		    background: #2e6ab1;
-		    color: white;
-		    padding: 0.4em 0.6em;
-		    width: 22em;
-		    margin-bottom: 0.3em;
-		    text-align: center; }
-		    .digg_pagination .page_info b {
-		      color: #000033;
-		      background: #6aa6ed;
-		      padding: 0.1em 0.25em; }
-		  .digg_pagination:after {
-		    content: ".";
-		    display: block;
-		    height: 0;
-		    clear: both;
-		    visibility: hidden; }
-		  * html .digg_pagination {
-		    height: 1%; }
-		  *:first-child + html .digg_pagination {
-		    overflow: hidden; }
-		
-	</style>
-
+	<%= stylesheet_link_tag 'digg.pagination' %>
 <% end -%>
 
 <ul class="breadcrumb">
@@ -60,12 +8,12 @@
 	<span class="divider">/</span>
 </li>
 <li class='active'>
-	<%= link_to "相册", '#'%>
+	<%= link_to "照片", '#'%>
 </li>
 </ul>
 
 <div class="btn-group">
-	<%= link_to '上传照片', new_admin_photo_path, :class => 'btn' %>
+	<%= link_to '上传照片', no_album_new_admin_photo_path, :class => 'btn' %>
 </div>
 <div class='row'>
 <div class='span12'>
@@ -75,7 +23,7 @@
 <ul class="thumbnails">
 	<% @photos.each do |p|%>
   <li class="span3">
-  	<%= link_to edit_admin_photo_path(p) do %>
+  	<%= link_to admin_photo_path(p) do %>
       <%= image_tag p.id2relative_path%>
     <% end -%>
   </li>
