--- a/app/views/admin/photos/show.html.erb
+++ b/app/views/admin/photos/show.html.erb
@@ -1,10 +1,40 @@
+<%= content_for :head do %>
+	<%= javascript_include_tag 'jquery-1.3.2', :cache => true %>
+	<%= javascript_include_tag 'bootstrap-button', :cache => true %>
+	<script type="text/javascript">
+		(function ($) {
+				$(function(){
+					var photo_id = $('#photo_id').val();
+					$('.photo-type').click(function () {
+						var $this = $(this);
+						$.post('/admin/photos/' + photo_id + '/update', {
+							'photo[category_id]': $this.attr('data-category'),
+							'_method': 'put'
+						}, function (result) {
+							$('#category').text(result.category);
+						}).error(function () {
+							alert('fail');
+						});
+					});
+
+					$('.destroy').click(function () {
+						if (confirm('确定要删除这张照片？')) {
+							$('form').submit();
+						};
+						return false;
+					})
+				});
+		})(jQuery)
+	</script>
+<% end -%>
+
 <ul class="breadcrumb">
 	<li>
 		<%= link_to "首页", admin_path %>
 		<span class="divider">/</span>
 	</li>
 	<li>
-		<%= link_to "相册", admin_photos_path%>
+		<%= link_to "照片", admin_photos_path%>
 		<span class="divider">/</span>
 	</li>
 	<li class='active'>
@@ -13,6 +43,26 @@
 </ul>
 
 <div class='page-header'>
-  <h1>照片编号： <%= @photo.id %></h1>
+	<%= hidden_field_tag :photo_id, @photo.id %>
+  <h1 style='margin: 10px 0'>照片编号： <%= "#{@photo.id}" %>
+  </h1>
+</div>
+<div class='btn-toolbar'>
+	<div class="btn-group">
+		<% form_for @photo , :url => admin_photo_path(@photo) do |f| -%>
+		  <%= hidden_field_tag '_method', 'delete'%>
+		  <%= link_to "#",
+		   :class => 'btn btn-danger destroy',
+		   :confirm => '确定要删除此产品么?', :method => :delete do %>
+		   <i class='icon-trash icon-white'></i> 删除
+		  <% end -%>
+		<% end -%>
+	</div>
+</div>
+
+<div class='row'>
+	<div class='span8'>
+		<%= image_tag @photo.id2relative_path%>
+	</div>
 </div>
 
