--- a/app/views/admin/share/_header.html.erb
+++ b/app/views/admin/share/_header.html.erb
@@ -14,6 +14,7 @@
           </li>
           <li><%= link_to "产品", admin_productions_path %>   </li>
           <li><%= link_to "相册", admin_albums_path %>   </li>
+          <li><%= link_to "照片", admin_photos_path %>   </li>
           <li><%= link_to "消息", admin_messages_path %></li>
         </ul>
         <ul class='nav pull-right'>
