--- a/app/views/admin/albums/show.html.erb
+++ b/app/views/admin/albums/show.html.erb
@@ -25,7 +25,17 @@
               );
           }
           return false;
-      })
+      });
+
+      $('.set_cover').click(function () {
+        var $this = $(this);
+        $.post('/admin/albums/' + album_id + '/set_cover', {
+          'photo_id': $this.attr('photo_id')
+        }, function () {
+          $('#cover img').attr('src', $this.closest('.thumbnail').find('img').attr('src'));
+        });
+        return false;
+      });
     })
   </script>
 <% end -%>
@@ -44,8 +54,20 @@
   </li>
 </ul>
 <div class='page-header'>
-  <h1><%= @album.name%></h1>
+  <h1><%= @album.name%> </h1>
 </div>
+
+<ul class="thumbnails">
+  <li class='span3'>
+    <div class='thumbnail' id='cover'>
+      <%= image_tag @album.get_cover%>
+      <div class='caption'>
+        <p>封面</p>
+      </div>
+    </div>
+  </li>
+</ul>
+
 <div class="btn-group">
   <%= link_to edit_admin_album_path(@album), 
   :class => 'btn btn-primary' do %>
@@ -78,6 +100,9 @@
 
                 <%= link_to '#', :class => 'btn btn-danger remove_photo', :photo_id => p.id  do %>
                   <i class='icon-trash icon-white'></i> 移除
+                <% end -%>
+                <%= link_to '#', :class => 'btn set_cover', :photo_id => p.id do %>
+                  <i class='icon-white'></i> 设为封面
                 <% end -%>
                 <% end -%>
               </p>
