--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -19,10 +19,10 @@
 			<% if  @production %>
 			<h3><%= @production.name%></h3>
 			<div class="example">
-				<span><img src="images/banner/pic_01.jpg" /></span>
-				<span><img src="images/banner/pic_02.jpg" /></span>
-				<span><img src="images/banner/pic_03.jpg" /></span>
-				<span><img src="images/banner/pic_04.jpg" /></span>
+				<span><img src="images/images-banner/pic_001.jpg" /></span>
+				<span><img src="images/images-banner/pic_002.jpg" /></span>
+				<span><img src="images/images-banner/pic_003.jpg" /></span>
+				<span><img src="images/images-banner/pic_004.jpg" /></span>
 			</div>
 			<div class="main">
 				<img src="images/content/introduction.gif" />
