--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,4 +1,6 @@
 <%= content_for :head do%>
+	<title>越摄影 - 在线留言</title>
+	<meta content='有任何意见和需要任何帮助请留言'>
 	<%= stylesheet_link_tag 'content'%>
 <% end %>
 	<div class="content">
