--- a/app/views/welcome/brand.html.erb
+++ b/app/views/welcome/brand.html.erb
@@ -1,4 +1,6 @@
 <%=content_for :head do %>
+	<title>越摄影 - 品牌理念</title>
+	<meta content='为客户提供高质量的精美艺术照片和百分百的亲情服务，工作室是独具特色风格并且以外景拍摄为主，坚持着无虚价，无陷阱消费，私人造型师' name='description'>
 	<%=stylesheet_link_tag 'content'%>
 <% end%>
 	<div class="content">
