--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -1,4 +1,6 @@
 <%= content_for :head do%>
+	<title>越摄影 - 联系我们</title>
+	<meta content='推荐上门咨询：星期一至星期天早9：00—晚19：00，云南省大理市大理古城红龙井16号' name='description'>
 	<%= stylesheet_link_tag 'content'%>
 	<%= stylesheet_link_tag 'note' %>
 <% end %>
