--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,6 @@
    <%= content_for :head do %>
+   <title>越摄影</title>
+   <meta content='云南大理第一高端婚纱摄影工作室' name='description'>
    <link rel="stylesheet" href="stylesheets/pic.css" type="text/css" />
    <script src="javascripts/jquery-zzjs.js" type=text/javascript></script>
    <script src="javascripts/imgPlay.js" type=text/javascript></script>
