--- a/app/views/welcome/team.html.erb
+++ b/app/views/welcome/team.html.erb
@@ -1,4 +1,6 @@
 <%= content_for :head do%>
+	<title>越摄影 - 团队介绍</title>
+	<meta content='工作室是独具特色风格并且以外景拍摄为主，室内创新为一体的工作室，我们拥有着一群勇于创新的实力团队，拍摄风格自然而独具特色，我们不再是让您来配合我们拍摄，而是我们配合您来拍摄，为顾客实现价值，拍出真正属于您的独一无二的完美婚纱。' name='description'>
 	<%= stylesheet_link_tag 'content'%>
 <% end %>	
 	<div class="content">
