--- a/app/views/weddings/index.html.erb
+++ b/app/views/weddings/index.html.erb
@@ -1,4 +1,6 @@
 <%= content_for :head do%>
+	<title>越摄影 - 婚纱套餐</title>
+	<meta content='工作室是独具特色风格并且以外景拍摄为主，室内创新为一体的工作室，我们拥有着一群勇于创新的实力团队，拍摄风格自然而独具特色，我们不再是让您来配合我们拍摄，而是我们配合您来拍摄，为顾客实现价值，拍出真正属于您的独一无二的完美婚纱。'>
 	<%= stylesheet_link_tag 'content'%>
 <% end %>	
 	<div class="content">
@@ -7,7 +9,7 @@
 			<ul>
 				 <% @productions.each do |p| %>
 					  <li>                 
-						<%= link_to p.name, weddings_path(:production_id => p.id) %>
+						<%= link_to p.name.truncate(10), weddings_path(:production_id => p.id) %>
 					  </li>
 				 <% end %>
 			</ul>
@@ -17,7 +19,7 @@
 		</div>
 		<div class="right"> 
 			<% if  @production %>
-			<h3><%= @production.name%></h3>
+			<h3 class=''><%= @production.name%></h3>
 			<div class="example">
 				<span><img src="images/banner/pic_01.jpg" /></span>
 				<span><img src="images/banner/pic_02.jpg" /></span>
