--- a/app/views/admin/albums/show.html.erb
+++ b/app/views/admin/albums/show.html.erb
@@ -1,5 +1,6 @@
 <%= content_for :head do %>
   <%= javascript_include_tag 'jquery-1.3.2' %>
+  <%= javascript_include_tag 'jquery.masonry.min' %>
   <script type="text/javascript">
     $(function () {
       $.ajaxSetup({beforeSend:function(a){a.setRequestHeader("X-CSRF-Token",$('meta[name="csrf-token"]').attr("content"))}});
@@ -36,6 +37,14 @@
         });
         return false;
       });
+
+      var $waterfall = $('#waterfall');
+      $waterfall.imagesLoaded(function () {
+          $waterfall.masonry({
+            itemSelector: '.item'
+          })
+      });
+     
     })
   </script>
 <% end -%>
@@ -68,7 +77,7 @@
   </li>
 </ul>
 
-<div class="btn-group">
+<div class="btn-group" style='margin-bottom: 20px'>
   <%= link_to edit_admin_album_path(@album), 
   :class => 'btn btn-primary' do %>
     <i class='icon-pencil icon-white'></i> 编辑
@@ -87,9 +96,9 @@
       <% end -%>
     <% end -%>
 </div>
-<ul class="thumbnails">
+<ul id='waterfall' class="thumbnails">
   <% @photos.each do |p| %>
-        <li class="span3">
+        <li class="span3 item">
           <div class="thumbnail">
             <%= link_to admin_photo_path(p) do %>
               <%= image_tag p.id2relative_path%>
