--- a/app/views/admin/photos/index.html.erb
+++ b/app/views/admin/photos/index.html.erb
@@ -1,5 +1,17 @@
 <%= content_for :head do %>
 	<%= stylesheet_link_tag 'digg.pagination' %>
+	<%= javascript_include_tag 'jquery-1.3.2' %>
+	<%= javascript_include_tag 'jquery.masonry.min' %>
+	<script type="text/javascript">
+		$(function  () {
+			var $waterfall = $('#waterfall');
+			$waterfall.imagesLoaded(function () {
+			    $waterfall.masonry({
+			      itemSelector: '.item'
+			    })
+			});
+		})
+	</script>
 <% end -%>
 
 <ul class="breadcrumb">
@@ -11,18 +23,16 @@
 	<%= link_to "照片", '#'%>
 </li>
 </ul>
-
-<div class="btn-group">
-	<%= link_to '上传照片', no_album_new_admin_photo_path, :class => 'btn' %>
-</div>
-<div class='row'>
-<div class='span12'>
-<%= will_paginate @photos,  :class=> 'digg_pagination',:previous_label => '上一页',:next_label => '下一页'%>
+<div class='container' style='margin: 7px 0 20px 0'>
+	<div class="btn-group">
+		<%= link_to '上传照片', no_album_new_admin_photo_path, :class => 'btn' %>
+	</div>
+		<%= will_paginate @photos,  :class=> 'digg_pagination',:previous_label => '上一页',:next_label => '下一页'%>
 </div>
 
-<ul class="thumbnails">
+<ul id='waterfall' class="thumbnails">
 	<% @photos.each do |p|%>
-  <li class="span3">
+  <li class="span3 item">
   	<%= link_to admin_photo_path(p) do %>
       <%= image_tag p.id2relative_path%>
     <% end -%>
@@ -30,8 +40,7 @@
   <% end -%>
 </ul>
 
-<div class='span12'>
-
+<div class='container'>
 <%= will_paginate @photos,  :class=> 'digg_pagination',:previous_label => '上一页',:next_label => '下一页'%>
 </div>
 </div>
