--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -13,15 +13,16 @@
 	<embed src='http://www.ichenbo.com/music/泰勒%20斯威夫特-Love%20Story%20%20.mp3' width='0' height='0' loop="true" autostart="true">
 	<div class="content">
 		<div class="banner">
-			<DIV id=imgPlay>
-				<UL class=imgs id=actor>
-  					<LI><A><IMG src="images/banner/yue_1.jpg"></A></LI>
-  					<LI><A><IMG src="images/banner/yue_2.jpg"></A></LI>
-  					<LI><A><IMG src="images/banner/yue_3.jpg"></A></LI>
-  					<LI><A><IMG src="images/banner/yue_4.jpg"></A></LI>
-  					<LI><A><IMG src="images/banner/yue_5.jpg"></A></LI>
-  					<LI><A><IMG src="images/banner/yue_6.jpg"></A></LI>
-  				</UL>
+			<DIV id='imgPlay'>
+				<ul class='imgs' id='actor'>
+					<% (1..9).each do |i| %>
+						<li>
+							<a>
+								<%= image_tag "ui/index/#{i}.jpg" %>
+							</a>
+						</li>
+					<% end -%>
+  				</ul>
 			</DIV>
 		</div>
 				<div class="works">
@@ -32,7 +33,7 @@
 								<%= link_to photos_path(:album_id => album.id) do %>
 									<%= image_tag album.get_cover%>
 									<span>
-										<%= album.name%>
+										<%= album.name.truncate(18)%>
 									</span>
 									<% end -%>
 								</li>
