--- a/app/views/share/_header.html.erb
+++ b/app/views/share/_header.html.erb
@@ -1,3 +1,4 @@
+<embed src='http://www.ichenbo.com/music/泰勒%20斯威夫特-Love%20Story%20%20.mp3' width='0' height='0' loop="true" autostart="true">
 <div class="header">
 	
 </div>
