--- a/public/stylesheets/content.css
+++ b/public/stylesheets/content.css
@@ -185,18 +185,19 @@ h2,h3,h4{
 }
 #wrap .content .right .main h4{
 	width:80px;
-	float:left;
 	font-size:14px;
 	color:#a7804a;
 }
 #wrap .content .right .main .tips{
 	color:#cb2f07;
 }
+#wrap .content .right .main > div {
+	margin-bottom: 15px;
+}
 #wrap .content .right .main ul li{
 	color:#a7804a;
 	font-size:14px;
-	width:590px;
-	float:left;
+	width:100%;
 }
 #wrap .content .right .main ul li p{
 	padding:0px 0px 0px 40px;
