--- a/app/views/admin/productions/_form.html.erb
+++ b/app/views/admin/productions/_form.html.erb
@@ -65,7 +65,7 @@
       <label class="control-label" for="input01">赠品</label>
       <div class="controls">
         <%=f.text_area :gift, :class => 'input-xlarge', :rows => 3%>
-        <p class="help-block">每一项赠品以分号空格分割,例：相簿 礼物 花瓶</p>
+        <p class="help-block">每一项赠品以空格分割,例：相簿 礼物 花瓶</p>
       </div>
     </div>
     <div class="control-group">
