--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   <%= stylesheet_link_tag 'content'%>
   <%= csrf_meta_tag %> 
   <%= javascript_include_tag 'jquery-1.3.2'%>
-
+ <meta name="keywords" content="越摄影,大理越摄影,大理婚纱摄影,大理婚纱摄影工作室,大理摄影工作室">
   <%= yield :head%>
 
 </head>
