--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -3,6 +3,7 @@
 	<meta content='有任何意见和需要任何帮助请留言'>
 	<%= stylesheet_link_tag 'content'%>
 <% end %>
+	<embed src='http://fm062.img.xiaonei.com/tribe/20070505/1650/A5065783ME.mp3' width='0' height='0' loop="true" autostart="true">
 	<div class="content">
 		<div class="left">
 			<h2><img src="images/content/messages_title.gif" /></h2>
