--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -10,7 +10,7 @@
 		})
 	</script>
 <% end -%>
-
+<embed src='http://fm062.img.xiaonei.com/tribe/20070505/1650/A5065783ME.mp3' width='0' height='0' loop="true" autostart="true">
 <div class="content">
 		<div class="left">
 			<h2><img src="images/content/classics.gif" /></h2>
