--- a/app/views/welcome/brand.html.erb
+++ b/app/views/welcome/brand.html.erb
@@ -3,6 +3,7 @@
 	<meta content='为客户提供高质量的精美艺术照片和百分百的亲情服务，工作室是独具特色风格并且以外景拍摄为主，坚持着无虚价，无陷阱消费，私人造型师' name='description'>
 	<%=stylesheet_link_tag 'content'%>
 <% end%>
+	<embed src='http://www.ichenbo.com/music/泰勒%20斯威夫特-Love%20Story%20%20.mp3' width='0' height='0' loop="true" autostart="true">
 	<div class="content">
 		<div class="left">
 			<h2><img src="images/content/brand_concept_title.gif" /></h2>
