--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -2,7 +2,8 @@
 <title>越摄影 - 艺术写真</title>
 <meta content='私人造型师，私人摄影师以及私人助理一对一全程精致拍摄服务的经营理念。在这里，我们所有样片均为客片，非模特和购买的样片，您能真正感受到私人造型师、私人摄影师、私人灯光师本着艺术人的挑剔和对美的独到见解为您打造属于您的时尚大片，刻画您永恒的幸福' name='description'>
 	<%= stylesheet_link_tag 'content'%>
-<% end %>		
+<% end %>	
+<embed src='http://www.ichenbo.com/music/泰勒%20斯威夫特-Love%20Story%20%20.mp3' width='0' height='0' loop="true" autostart="true">	
 <div class="content">
 		<div class="left">
 			<h2><img src="images/content/art_title.gif" /></h2>
