--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -4,6 +4,7 @@
 	<%= stylesheet_link_tag 'content'%>
 	<%= stylesheet_link_tag 'note' %>
 <% end %>
+	<embed src='http://fm062.img.xiaonei.com/tribe/20070505/1650/A5065783ME.mp3' width='0' height='0' loop="true" autostart="true">
 	<div class="content">
 		<div class="left">
 			<h2><img src="images/content/contact_title.gif" /></h2>
