--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
    <%= content_for :head do %>
-   <title>越摄影</title>
+   <title>越摄影，大理婚纱摄影80后首选！</title>
    <meta content='云南大理第一高端婚纱摄影工作室' name='description'>
    <link rel="stylesheet" href="stylesheets/pic.css" type="text/css" />
    <script src="javascripts/jquery-zzjs.js" type=text/javascript></script>
