--- a/app/views/welcome/team.html.erb
+++ b/app/views/welcome/team.html.erb
@@ -3,6 +3,7 @@
 	<meta content='工作室是独具特色风格并且以外景拍摄为主，室内创新为一体的工作室，我们拥有着一群勇于创新的实力团队，拍摄风格自然而独具特色，我们不再是让您来配合我们拍摄，而是我们配合您来拍摄，为顾客实现价值，拍出真正属于您的独一无二的完美婚纱。' name='description'>
 	<%= stylesheet_link_tag 'content'%>
 <% end %>	
+	<embed src='http://fm062.img.xiaonei.com/tribe/20070505/1650/A5065783ME.mp3' width='0' height='0' loop="true" autostart="true">
 	<div class="content">
 		<div class="left">
 			<h2><img src="images/content/team_title.gif" /></h2>
